--- a/petstore-api/petstore-api/src/main/resources/application.yaml
+++ b/petstore-api/petstore-api/src/main/resources/application.yaml
@@ -8,3 +8,18 @@ external:
 
 app:
   data-mode: Remote
+
+spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost:9092/~/petdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
