--- a/petstore-api/petstore-api/build.gradle
+++ b/petstore-api/petstore-api/build.gradle
@@ -31,6 +31,12 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA (Hibernate)
 	implementation 'com.h2database:h2:2.2.224'                                 // Embedded H2 DB
+
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+	implementation("org.apache.commons:commons-lang3:3.0")
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+
 }
 
 tasks.named('test') {
