--- a/petstore-api/petstore-api/build.gradle
+++ b/petstore-api/petstore-api/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	implementation("org.apache.commons:commons-lang3:3.0")
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 }
 
 tasks.named('test') {
