--- a/petstore-api/petstore-api/src/main/resources/application.yaml
+++ b/petstore-api/petstore-api/src/main/resources/application.yaml
@@ -26,3 +26,15 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
+
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+
+logging:
+  level:
+    org:
+      springdoc: DEBUG
