--- a/petstore-api/petstore-api/build.gradle
+++ b/petstore-api/petstore-api/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.7.0'
 
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 
 }
 
