--- a/petstore-api/petstore-api/src/main/resources/application.yaml
+++ b/petstore-api/petstore-api/src/main/resources/application.yaml
@@ -39,3 +39,9 @@ logging:
   level:
     org:
       springdoc: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
