--- a/petstore-api/petstore-api/src/main/resources/application.yaml
+++ b/petstore-api/petstore-api/src/main/resources/application.yaml
@@ -27,13 +27,14 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
 
-#springdoc:
-#  api-docs:
-#    enabled: true
-#    path: /api-docs
-#  swagger-ui:
-#    enabled: true
-#    path: /swagger-ui.html
+springdoc:
+  enable-native-support: true
+  api-docs:
+    enabled: true
+    path: /api-docs
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
 
 logging:
   level:
