fix dependency injection issue

--- a/api-test-tools/rest-assured/pom.xml
+++ b/api-test-tools/rest-assured/pom.xml
@@ -67,6 +67,14 @@
 			<version>7.15.0</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>7.15.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
